# claude-yoke

./: .gitignore  README.md  pyproject.toml  run.ps1
claude_tui/: __init__.py  __main__.py  app.py  config.py  render.py  styles.tcss  theme.py
claude_tui/core/: __init__.py  claude_client.py  sessions.py
claude_tui/widgets/: __init__.py  activity_bar.py  chat.py  editor.py  files_tree.py  info_panels.py  permission.py  question.py  sessions_list.py  splitter.py
tests/: ask_probe.py  fake_ask_cli.py  fake_cli.py  fake_perm_cli.py  layout_probe.py  perm_probe.py  showcase.py  smoke_test.py  stream_probe.py
