[project]
name = "claude-tui"
version = "0.1.0"
description = "A terminal UI for Claude Code — multi-pane chat, sessions browser, token & agent panels."
requires-python = ">=3.10"
dependencies = ["textual>=0.80"]

[project.scripts]
claude-tui = "claude_tui.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_tui*"]
