[project]
name = "claude-yoke"
version = "0.1.0"
description = "Claude Yoke — a terminal UI (TUI) for Claude Code: multi-pane chat, sessions browser, live token gauge and agents panel."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "tui", "terminal", "textual", "ai", "coding-agent", "cli", "dashboard"]
dependencies = ["textual>=0.80"]

[project.scripts]
claude-yoke = "claude_tui.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_tui*"]
